# harbor-mcp

./: .gitignore  DESIGN.md  DISTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json
.agents/: product-marketing.md
.github/ISSUE_TEMPLATE/: config.yml  feature-request.yml  install-update.yml  local-server-identification.yml  mcp-connection.yml  project-detection.yml
.github/workflows/: release.yml
docs/: index.html  robots.txt  sitemap.xml
docs/assets/: site.js  styles.css
scripts/: mcp-bridge-soak.mjs  prepare-native-bridge.mjs
src/: App.tsx  api.ts  main.tsx  styles.css  titlebar.ts  types.ts  useAppUpdater.test.tsx  useAppUpdater.ts  useAppearance.ts  useDragDrop.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  updater.json
src-tauri/examples/: verify_update_signature.rs
src-tauri/icons/: icon.icns
src-tauri/mcp-bridge/: Cargo.toml
src-tauri/mcp-bridge/src/: bridge.rs  descriptor.rs  lib.rs  main.rs  runtime.rs
src-tauri/mcp-bridge/tests/: stdio_rotation.rs
src-tauri/src/: commands.rs  detect.rs  discovery.rs  health.rs  lib.rs  mcp.rs  model.rs  ops.rs  ports.rs  state.rs  store.rs  supervisor.rs  sysenv.rs  tray.rs
src/components/: AppDetail.tsx  AppSettingsPanel.tsx  ConfigEditor.tsx  ConfirmDialog.tsx  ConnectionsPanel.tsx  LocalServersPanel.tsx  LogPane.tsx  OverviewPanel.tsx  RegisterDialog.tsx  SettingsPanel.tsx  StatusDot.tsx  TrayPanel.tsx  UpdateNotice.tsx  icons.tsx
