[package]
name = "harbor"
version = "0.2.0"
description = "A trusted local development server control plane for people and AI agents"
authors = ["Luke Fairbanks"]
edition = "2021"
license = "MIT"
repository = "https://github.com/luke-fairbanks/harbor-mcp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "harbor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "time", "sync", "net"] }
axum = "0.8"
anyhow = "1"
nix = { version = "0.31", features = ["signal", "process"] }
rmcp = { version = "1.8", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1"
uuid = { version = "1", features = ["v4"] }
toml_edit = "0.22"
